Spacing fixed on question body and question detail

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/alta-sites.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/alta-sites.less
@@ -14,3 +14,6 @@
     margin-left: auto;
     margin-right: auto;
 }
+.center-body{
+    padding-left:15px;
+}
