--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.css
@@ -1,4 +1,5 @@
-﻿.line-clamp {
+﻿
+.line-clamp {
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;  
